Changes in version 0.8-7 (??-0?-2014)
=====================================

- Fixed: Graph image exports were not possible.

- Support for entangled graphs is no longer highly experimental, 
  but enabled as default.

- For entangled graphs there is now more than one tab showing the graph:
  The first tab still shows the combined graphs and then a separate tab
  for each graph follows.
  
- The (disabled) menu entry for PDF reports was replaced by functionality
  for Office Open XML (MS Word docx) support. Package xlsxjars is therefore
  now a dependency (IMPORTS), since it already provides the necessary
  Apache POI jar files.

- Improved Graph Analysis checks whether weights sum up to 1 for all subgraphs.

- Edges are highlighted if transition matrix cells are edited.


Changes in version 0.8-6 (17-02-2014)
=====================================

- Improved memory settings. Especially in R 2.15.1 and 2.15.2 on 32-bit systems 
  errors like the following could occur when the GUI was used:
  java.lang.OutOfMemoryError: unable to create new native thread

- Fixed: When the value of the alpha field was not a valid number in the GUI,
  an infite loop of warning dialogs popped up.
  
- Fixed: Loading old graph objects from version 0.6.x, i.e. from before August 2011,
  without package 'graph' asks to install this package. If this is refused or
  the installation failed, bad things happened like a complete crash of the current
  R session.

- Function 'graph2latex' gains an argument 'scaleText'. If TRUE (default)
  a scalebox is used in LaTeX instead of the optional parameter 'scale'
  from the tikzpicture environment.

- Improved documentation. Some Rd files are built by a patched version of
  roxygen2 that escapes "\" in arguments and understands "returnItem": 
  install_github("roxygen2", username="kornl")
  (This version includes especially Yihui's pull request: 
   https://github.com/klutometis/roxygen/pull/112 
   and A. Alfons's pull request: