@@ -33,7 +33,7 @@
 #' even if the sum of weights is strictly smaller than one. This has the
 #' consequence that certain test procedures that do not test each intersection
 #' null hypothesis at the full level alpha may not be implemented (e.g., a
-#' single step Dunnett test). If \code{exhaust} is set to \code{FALSE}
+#' single step Dunnett test). If \code{upscale} is set to \code{FALSE}
 #' (default) the parametric tests are performed at a reduced level alpha of
 #' sum(w) * alpha and p-values adjusted accordingly such that test procedures
 #' with non-exhaustive weighting strategies may be implemented. If set to
@@ -58,7 +58,7 @@
 #' @param hint if intersection hypotheses weights have already been computed
 #' (output of \code{\link{generateWeights}}) can be passed here otherwise will
 #' be computed during execution
-#' @param exhaust if \code{FALSE} (default) the p-values are additionally
+#' @param upscale if \code{FALSE} (default) the p-values are additionally
 #' adjusted for the case that non-exhaustive weights are specified. (See
 #' details)
 #' @return If adjusted is set to true returns a vector of adjusted p-values.
@@ -99,8 +99,8 @@
 #' 
 #' @export generatePvals
 #' 
-generatePvals <- function(g,w,cr,p,adjusted=TRUE,hint=generateWeights(g,w),exhaust=FALSE){#, alternatives="less"){
-  res <- t(apply(hint,1,pvals.dunnett,p=p,cr=cr,exhaust=exhaust))#, alternatives=alternatives))
+generatePvals <- function(g,w,cr,p,adjusted=TRUE,hint=generateWeights(g,w),upscale=FALSE){#, alternatives="less"){
+  res <- t(apply(hint,1,pvals.dunnett,p=p,cr=cr,upscale=upscale))#, alternatives=alternatives))
   if(adjusted){
     return(ad.p(res))
   } else {
