@@ -3,8 +3,9 @@
 \title{Graph based Multiple Comparison Procedures}
 \usage{
   gMCP(graph, pvalues, test, correlation, alpha = 0.05,
-    approxEps = TRUE, eps = 10^(-3), ..., useC = FALSE,
-    verbose = FALSE, keepWeights = TRUE, adjPValues = TRUE)
+    approxEps = TRUE, eps = 10^(-3), ..., upscale = FALSE,
+    useC = FALSE, verbose = FALSE, keepWeights = TRUE,
+    adjPValues = TRUE)
 }
 \arguments{
   \item{graph}{A graph of class \code{\link{graphMCP}}.}
@@ -14,19 +15,13 @@
   details section for the parametric tests, when a
   correlation is specified.}
 
-  \item{test}{By default the Bonferroni-based test
-  procedures are used if no correlation is specified and
-  the algorithm from Bretz et al. 2011 if a correlation is
-  specified.  If test is set to \code{"Simes"} the weighted
-  Simes test will be performed for each subset of
-  hypotheses.  If test equals \code{"Bretz2011"} the
-  weighted parametric test described in Bretz et al. 2011
-  is performed.  If test equals \code{"simple-parametric"}
-  for each subset a weighted parametric test is performed
-  at the reduced level alpha of sum(w)*alpha, where sum(w)
-  is the sum of all node weights in this subset. Otherwise
-  the procedure is the same as described in Bretz et al.
-  2011.}
+  \item{test}{Should be either \code{"Bonferroni"},
+  \code{"Simes"} or \code{"parametric"}. If it is not
+  specified by default the Bonferroni-based test procedure
+  is used if no correlation is specified and the algorithm
+  from Bretz et al. 2011 if a correlation is specified.  If
+  test is set to \code{"Simes"} the weighted Simes test
+  will be performed for each subset of hypotheses.}
 
   \item{correlation}{Optional correlation matrix.  If the
   weighted Simes test is performed, it is checked whether
