@@ -3,7 +3,7 @@
 \title{generateBounds}
 \usage{
   generateBounds(g, w, cr, al = 0.05,
-    hint = generateWeights(g, w), exhaust = F)
+    hint = generateWeights(g, w), upscale = FALSE)
 }
 \arguments{
   \item{g}{graph defined as a matrix, each element defines
@@ -29,7 +29,7 @@
   \code{\link{generateWeights}}) can be passed here
   otherwise will be computed during execution}
 
-  \item{exhaust}{if \code{FALSE} (default) the parametric
+  \item{upscale}{if \code{FALSE} (default) the parametric
   test is performed at the reduced level alpha of
   sum(w)*alpha. (See details)}
 }
@@ -85,7 +85,7 @@
   consequence that certain test procedures that do not test
   each intersection null hypothesis at the full level alpha
   may not be implemented (e.g., a single step Dunnett
-  test). If \code{exhaust} is set to \code{FALSE} (default)
+  test). If \code{upscale} is set to \code{FALSE} (default)
   the parametric tests are performed at a reduced level
   alpha of sum(w) * alpha and p-values adjusted accordingly
   such that test procedures with non-exhaustive weighting
